20191210
========
- Fixed #46322 - Use estimatedDocumentCount() instead of countDocuments()

20191112
========
- Add #45405 - Update MongoDB Java Driver to 3.11.1
- Fixed #44422 - Validate the testing connection method with the MongoDB API version used
- Fixed #45099 - Clarify usage of the Field Types in MongoDB Custom Wrapper Documentation
- Fixed #44506 - Add information regarding Connectivity Ports and SSL certificate in the
                 MongoDB Custom Wrapper User Manual

20190426
=========
- Add #42093 - Improve code quality tooling
- Fixed #42332 - MongoDB custom wrapper ignoring "Null" fields in schema inference
- Fixed #42848 - MongoDB custom wrapper that avoids calling "listCollections"

20180928
========
- Support TLS 1.2 in Java 7 environments like Denodo 6.

20180814
========
- Add #38065 - Stop method is not implemented
- Add #29776 - MongoDB authentication pass-through
- Fixed #36045 - Set BSON Timestamp fields as "not searchable"
- Add #37654 - Connect to Cosmos DI via MongoDB Wrapper
- Add #38488 - Document CosmosDB support
- Add #34191 - Add compatible versions of VDP to MongoDB wrapper documentation
- Add #38064 - Clarify in the user manual that functions and the group by are not being delegated

20180712
========
Add #33193 - Update mongoDB driver to 3.8.0

20180601
========
- Fixed #37841 - Operator "IN" is delegated badly when _id field is an ObjectID

20180326
========
- Added #36668 - Add support to delegate the operator "IN" to the MongoDB wrapper

20180116
========
- Fixed #35275 - Bad translation of IS NULL and IS NOT NULL filters.

20171120
========
- #34474 - Bad introspection of empty complex fields inside embedded documents

20171013
========
- #34025 - Improve support for MongoDB's internal "BSON Timestamp" data type.

20170919
========
- Fixed #33753 - Correctly deal with BsonTimestamp when creating schema from introspection query
- Added #33752 - Improve logging of view schemas, both at construction and at query execution time
